DashBoard + Run.bat alteration